Updated DB creatiun SQL Updated proxy liner Updated server with all the requirements
